--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: "montserrat";
 }
@@ -7,12 +6,18 @@ body {
   background-color: #ff4c68;
 }
 
-.container-fluid{
-    padding: 3% 15%;
+h2{
+  font-family: "montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.container-fluid {
+  padding: 3% 15%;
 }
 
 h1.heading {
-
   font-family: "montserrat", sans-serif;
   font-weight: 800;
   color: white;
@@ -20,3 +25,103 @@ h1.heading {
   line-height: 1.5;
 }
 
+.navbar-brand {
+  font-famity: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.navbar {
+  padding-bottom: 4.5rem;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  font-weight: lighter;
+}
+
+.download-button {
+  margin-top: 8%;
+}
+
+.title-image {
+  width: 60%;
+  transform: rotate(20deg);
+}
+
+/* feature section */
+#features {
+  padding: 7% 12%;
+}
+
+.feature {
+  padding: 3rem;
+  text-align: center;
+}
+
+.feature > h3 {
+  font-family: "montserrat";
+  font-weight: 800;
+  font-size: 1.3rem;
+}
+.feature > p {
+  color: #8f8f8f;
+}
+
+.feature-icon {
+  color: #ef8172;
+ 
+  margin: 1rem;
+}
+
+.feature-icon:hover /*pseduo class */
+{
+  color:#ff4c68 ;
+}
+
+/* testimonial section */
+#testimonials{
+  
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+.carousel-inner{
+  padding: 9% 15%;
+}
+
+.testimonial-img{
+  width:10%;
+  border-radius:100%;
+  margin:20px;
+}
+
+#press{
+    background-color: #ef8172;
+    padding-bottom:3%;
+    text-align: center;
+}
+
+.press-img
+{
+  width:15%;
+  margin: 20px 20px 50px;
+
+}
+
+/* pricing section */
+
+#pricing{
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-column
+{
+  padding: 3% 2%;
+}
