--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ h1.heading {
 }
 
 .navbar-brand {
-  font-famity: "Ubuntu";
+  font-family: "Ubuntu";
   font-size: 2.5rem;
   font-weight: bold;
 }
@@ -49,13 +49,20 @@ h1.heading {
 }
 
 .title-image {
-  width: 60%;
-  transform: rotate(20deg);
+  width: 55%;
+  transform: rotate(25deg);
+  
+  position: absolute;
+  left:100px;
+
 }
 
 /* feature section */
 #features {
   padding: 7% 12%;
+  background-color: #fff;
+  position: relative;
+
 }
 
 .feature {
@@ -124,4 +131,49 @@ h1.heading {
 .pricing-column
 {
   padding: 3% 2%;
+}
+
+/* call to action */
+#cta{
+  background-color:#ff4c68;
+  text-align: center;
+  padding: 10vh 20vw;
+
+}
+#cta>h3{
+  font-family: montserrat;
+  font-size: 2.5rem;
+  font-weight: 800;
+  color: #fff;
+
+}
+button{
+  margin:8px;
+}
+
+/* footer */
+
+#footer{
+background-color: #fff;
+text-align: center;
+padding: 40px;
+}
+
+.icon-link{
+  margin: 10px 7px;
+}
+
+
+/* media query */
+@media (max-width:1028px)
+{
+  .title-image
+  {
+    position: static;
+    transform: rotate(0);
+    margin:10% 0;
+  }
+  .title{
+    text-align: center;
+  }
 }
