--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,43 @@
 body {
   font-family: "montserrat";
+  text-align: center;
 }
 
-#title {
+/* sections */
+.colored-section {
   background-color: #ff4c68;
+  color: #fff;
 }
 
-h2{
-  font-family: "montserrat", sans-serif;
+.white-section {
+  background-color: #fff;
+}
+
+/* headings */
+
+.big-heading {
+  font-weight: 800;
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.section-heading {
   font-weight: 600;
   font-size: 3rem;
   line-height: 1.5;
 }
 
-.container-fluid {
-  padding: 3% 15%;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "montserrat";
 }
 
-h1.heading {
-  font-family: "montserrat", sans-serif;
-  font-weight: 800;
-  color: white;
-  font-size: 3rem;
-  line-height: 1.5;
+.container-fluid {
+  padding: 3% 15%;
 }
 
 .navbar-brand {
@@ -48,132 +63,124 @@ h1.heading {
   margin-top: 8%;
 }
 
+/* title */
+
+#title {
+  text-align: left;
+}
+
 .title-image {
   width: 55%;
   transform: rotate(25deg);
-  
-  position: absolute;
-  left:100px;
 
+  position: absolute;
+  left: 100px;
 }
 
 /* feature section */
 #features {
   padding: 7% 12%;
-  background-color: #fff;
-  position: relative;
 
+  position: relative;
 }
 
 .feature {
   padding: 3rem;
-  text-align: center;
 }
 
-.feature > h3 {
-  font-family: "montserrat";
+.feature-title {
   font-weight: 800;
   font-size: 1.3rem;
 }
+
 .feature > p {
   color: #8f8f8f;
 }
 
 .feature-icon {
   color: #ef8172;
- 
+
   margin: 1rem;
 }
 
-.feature-icon:hover /*pseduo class */
-{
-  color:#ff4c68 ;
+.feature-icon:hover /*pseduo class */ {
+  color: #ff4c68;
 }
 
 /* testimonial section */
-#testimonials{
-  
-  text-align: center;
+#testimonials {
   background-color: #ef8172;
-  color: #fff;
 }
 
-.carousel-inner{
+.carousel-inner {
   padding: 9% 15%;
 }
 
-.testimonial-img{
-  width:10%;
-  border-radius:100%;
-  margin:20px;
+.testimonial-text {
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
-#press{
-    background-color: #ef8172;
-    padding-bottom:3%;
-    text-align: center;
+.testimonial-img {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
 }
 
-.press-img
-{
-  width:15%;
+#press {
+  background-color: #ef8172;
+  padding-bottom: 3%;
+}
+
+.press-img {
+  width: 15%;
   margin: 20px 20px 50px;
-
 }
 
 /* pricing section */
 
-#pricing{
+#pricing {
   padding: 100px;
-  text-align: center;
 }
 
-.pricing-column
-{
+.pricing-text {
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.pricing-column {
   padding: 3% 2%;
 }
 
 /* call to action */
-#cta{
-  background-color:#ff4c68;
-  text-align: center;
+#cta {
   padding: 10vh 20vw;
-
 }
-#cta>h3{
-  font-family: montserrat;
-  font-size: 2.5rem;
-  font-weight: 800;
-  color: #fff;
 
-}
-button{
-  margin:8px;
+button {
+  margin: 8px;
 }
 
 /* footer */
 
-#footer{
-background-color: #fff;
-text-align: center;
-padding: 40px;
+#footer {
+  padding: 40px;
 }
 
-.icon-link{
+.icon-link {
   margin: 10px 7px;
 }
 
-
 /* media query */
-@media (max-width:1028px)
-{
-  .title-image
-  {
+@media (max-width: 1028px) {
+  .title-image {
     position: static;
     transform: rotate(0);
-    margin:10% 0;
+    margin: 10% 0;
   }
-  .title{
+  .title {
     text-align: center;
   }
 }
